--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,3 +8,33 @@ h1 {
     margin-top: 2%;
     margin-bottom: 2%;
 }
+
+.questions-section { 
+    display: grid;
+    gap: 1em;
+    margin: 0.5em;
+}
+
+@media(min-width: 1000px) {
+    .questions-section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+    }
+}
+
+.individual-questions {
+    color: black;;
+    background: rgba(243, 247, 248, 0.88); 
+    border-color: rgba(173,206,195,.38);
+    border: solid 1px;
+    border-color: rgba(210,225,236,.88);
+    border-radius: 3px 10px 3px 3px;
+    padding: 0.7em;
+}
+
+.individual-questions:hover {
+    border: solid 1px blue;
+    background: rgba(215, 239, 245, 0.88);
+    cursor: pointer;
+}
